[package]
name = "report"
version = "0.1.0"
edition = "2021"

[dependencies]
bart = "0.1.6"
bart_derive = "0.1.6"
base64 = "0.22.1"
charming = {version = "0.3.1", features = ["ssr"]}
chrono = {version = "0.4.38"}
chrono-tz = "0.9.0"
clap = {version = "4.5.7", features = ["derive"]}
clap-stdin = "0.4.0"
csv = "1.3.0"
itertools = "0.13.0"
serde = "1.0.203"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

